final day50 complete

--- a/Day50 Multiple linearRegression/Day50.ipynb
+++ b/Day50 Multiple linearRegression/Day50.ipynb
@@ -3635,9 +3635,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "harshkernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "harshkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
