--- a/Day52 batch Gradient Descent/Day52.ipynb
+++ b/Day52 batch Gradient Descent/Day52.ipynb
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import time "
    ]
   },
   {
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "751ddb50-5073-4199-8767-505677497ce9",
    "metadata": {},
    "outputs": [
@@ -546,7 +547,7 @@
        "        91.])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "4707949c-eaa4-4de3-89d1-896ee8027312",
    "metadata": {},
    "outputs": [],
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "id": "72bd75cf-c60a-4309-aac9-36e91aa62c90",
    "metadata": {},
    "outputs": [],
@@ -601,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "2552fc97-e693-416c-bda2-7b8b2d093d98",
    "metadata": {},
    "outputs": [
@@ -610,12 +611,15 @@
      "output_type": "stream",
      "text": [
       "152.01351687661833 [  14.38990585 -173.7235727   491.54898524  323.91524824  -39.32648042\n",
-      " -116.01061213 -194.04077415  103.38135565  451.63448787   97.57218278]\n"
+      " -116.01061213 -194.04077415  103.38135565  451.63448787   97.57218278]\n",
+      "0.05593252182006836\n"
      ]
     }
    ],
    "source": [
-    "bar.fit(X_train,y_train)\n"
+    "start = time.time()\n",
+    "bar.fit(X_train,y_train)\n",
+    "print(time.time()-start)"
    ]
   },
   {
